[gd_scene load_steps=4 format=3 uid="uid://chnkyfoe65k1e"]

[ext_resource type="Script" path="res://Scripts/Stack.gd" id="1_0jl0t"]
[ext_resource type="Texture2D" uid="uid://cnagprc8eumrs" path="res://Assets/Cards/Backs/Back4.png" id="2_fpx08"]
[ext_resource type="Texture2D" uid="uid://7gwkexmgf1su" path="res://Assets/Cards/Backs/BackHover.png" id="3_f474r"]

[node name="Stack" type="Node2D"]
script = ExtResource("1_0jl0t")

[node name="Stack" type="Sprite2D" parent="."]
texture = ExtResource("2_fpx08")
centered = false

[node name="NumberCards" type="Label" parent="."]
offset_top = -23.0
offset_right = 68.0
text = "0
"
horizontal_alignment = 1

[node name="StackButton" type="TextureButton" parent="."]
offset_right = 68.0
offset_bottom = 100.0
texture_hover = ExtResource("3_f474r")
stretch_mode = 0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]

[connection signal="pressed" from="StackButton" to="." method="_on_stack_button_pressed"]
